# NLP_ODS_project

./: README.md  pyproject.toml
notebooks/: analysis.ipynb  inference.ipynb  preprocessing.ipynb  training.ipynb
